syntax = "proto3";
package hotel;

message Hotel {
  string id = 1;
  string name = 2;
  string description = 3;
}

message GetHotelRequest {
  string id = 1;
}

message GetHotelResponse {
  Hotel hotel = 1;
}

message SearchHotelsRequest {
  string query = 1;
}

message SearchHotelsResponse {
  repeated Hotel hotels = 1;
}

message CreateHotelRequest {
  string name = 1;
  string description = 2;
}

message CreateHotelResponse {
  Hotel hotel = 1;
}

service HotelService {
  rpc CreateHotel (CreateHotelRequest) returns (CreateHotelResponse);
  rpc GetHotel(GetHotelRequest) returns (GetHotelResponse);
  rpc SearchHotels(SearchHotelsRequest) returns (SearchHotelsResponse);
}
